[package]
name = "kdl-script"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "execute kdl documents!"
repository = "https://github.com/Gankra/kdl-script"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
kdl = "4.5.0"
miette = { version = "5.3.0", features = ["fancy"] }
thiserror = "1.0.37"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
