[package]
name = "kdl-script"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "execute kdl documents!"
repository = "https://github.com/Gankra/kdl-script"
exclude = [
  "book/*",
  "src/snapshots/*",
  "src/tests/",
  "tests/",
  "examples/",
]

[[bin]]
name = "kdl-script"
required-features = ["cli"]

[features]
default = ["cli"]
# CLI interface for the binary
cli = ["eval", "clap", "tracing-subscriber", "miette/fancy", "serde_json"]
# The code for evaluating a compiled program (not needed for abi-cafe)
eval = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"], optional = true }
kdl = "4.5.0"
linked-hash-map = "0.5.6"
miette = { version = "7.2.0" }
nom = "7.1.3"
petgraph = "0.6.4"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
thiserror = "1.0.39"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.16", optional = true }

[dev-dependencies]
insta = "1.34.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# Where to host releases
hosting = ["github", "axodotdev"]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
